--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,5 +2,9 @@ password = "your_secure_password"
 # .streamlit/secrets.toml
 gemini_api_key = "your_gemini_api_key_here"
 
-
+# .streamlit/secrets.toml
+[tokens]
+user1_token = "token1"
+user2_token = "token2"
+user3_token = "token3"
 
