--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -4,7 +4,7 @@ gemini_api_key = "your_gemini_api_key_here"
 
 # .streamlit/secrets.toml
 [tokens]
-user1_token = "token1"
-user2_token = "token2"
-user3_token = "token3"
+user1_token = "a9f3b7c2-81d6-4e50-bc2a-7f18d3e4a6b5"
+user2_token = "d07c5e8a-34f1-49b2-a6d7-92e3b8f4c1a5"
+user3_token = "f2e4c6b8-91a3-4d5a-7f0b-38d7c1e9a2f5"
 
