--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,8 @@
 password = "your_secure_password"
 # .streamlit/secrets.toml
 gemini_api_key = "your_gemini_api_key_here"
+
+# Tokens
+user1_token = "user1"
+user2_token = "user2"
+user3_token = "user3"
